--- a/talent-studio-views/web/clients/demo/resources/language/en/messages.properties
+++ b/talent-studio-views/web/clients/demo/resources/language/en/messages.properties
@@ -94,3 +94,4 @@ questionnaires.items=Completed Appraisals
 appraisal.list=Appraisals
 menusection.appraisals=Appraisals
 mi.appraisals=Appraisals
+show.hide.nav=&ensp; &ensp;
