updated TME skins line item bug fixes

--- a/talent-studio-views/web/clients/tme/resources/language/en/messages.properties
+++ b/talent-studio-views/web/clients/tme/resources/language/en/messages.properties
@@ -94,3 +94,6 @@ questionnaires.items=Completed Appraisals
 appraisal.list=Appraisals
 menusection.appraisals=Appraisals
 mi.appraisals=Appraisals
+
+no.photograph=
+narrative.text.color=180,14,31
