fixed a refactoring error, removed delegate, introducing new services pattern to start using, need to try and mix, old spring and new anotation spring but having xml library problems, need to start removing these (XML removed first!)

--- a/talent-studio-views/web/src/main/resources/language/en/messages.properties
+++ b/talent-studio-views/web/src/main/resources/language/en/messages.properties
@@ -1,7 +1,7 @@
 ####==================== Application labels ====================###
 
 application.title=TalentEvolution
-application.copyright=Copyright &#169; 2004-@buildYear@, <a href="http://www.talentscope.net">TalentScope Inc.</a> All rights reserved.
+application.copyright=Copyright &#169; 2004-@buildYear@, <a href="http://www.talentscope.net">Talent Management Evolution, Inc.</a> All rights reserved.
 buildNum=@buildNo@
 date.format=dd MMM yyyy
 
