--- a/talent-studio-views/src/main/resources/language/en/messages.properties
+++ b/talent-studio-views/src/main/resources/language/en/messages.properties
@@ -2070,4 +2070,5 @@ pending.info=Pending People
 data.upload.info=Please upload your csv or excel data file in order to import your data intot he system
 data.successfully.uploaded=Data was successfully uploaded, please check back later to view the results
 mail.send.success=Mail successfully sent
+mail.send.error=Error occurred while sending the request
 no.selected.person=No selection made to send the notification to
