Just fixed the bug ajax implementation will need anotation approach and a rewrite of the answer questionnaires as an @Request flow to be done in the next version

--- a/talent-studio-views/src/main/resources/language/en/messages.properties
+++ b/talent-studio-views/src/main/resources/language/en/messages.properties
@@ -1421,6 +1421,7 @@ confirm.approve.message=Please confirm you wish to approve this objective. This 
 confirm.approve.all.message=Please confirm you wish to approve all the following objectives. This action cannot be undone.
 error.objective.target=Target must be greater than zero.
 send.email=Send Email Notification
+send.fail=An error occurred while trying to send the message please contact your administrator
 select.questionnaire.upload.option=Please select either the upload file option or the clone definition option to create a new definition. NOTE: if both are selected the clone option will be ignored.
 expiry.date=Expiry Date
 objective.goal=Objective
