Just fixed the bug ajax implementation will need anotation approach and a rewrite of the answer questionnaires as an @Request flow to be done in the next version

--- a/talent-studio-views/src/main/resources/language/en/messages.properties
+++ b/talent-studio-views/src/main/resources/language/en/messages.properties
@@ -2073,3 +2073,4 @@ data.successfully.uploaded=Data was successfully uploaded, please check back lat
 mail.send.success=Mail successfully sent
 mail.send.error=Error occurred while sending the request
 no.selected.person=No selection made to send the notification to
+no.manager.to.send.to=No managers available to inform
