--- a/talent-studio-views/src/main/resources/language/en/messages.properties
+++ b/talent-studio-views/src/main/resources/language/en/messages.properties
@@ -2074,3 +2074,4 @@ mail.send.success=Mail successfully sent
 mail.send.error=Error occurred while sending the request
 no.selected.person=No selection made to send the notification to
 no.manager.to.send.to=No managers available to inform
+download.pdf=Save
