--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -1,8 +1,8 @@
 ####==================== Application labels ====================###
 
 application.title=TalentEvolution
-application.copyright=Copyright &#169; 2004-@buildYear@, <a href="http://www.talentscope.net">Talent Management Evolution, Inc.</a> All rights reserved.
-buildNum=@buildNo@
+application.copyright=Copyright &#169; 2004-${build.year}, <a href="http://www.talentscope.net">Talent Management Evolution, Inc.</a> All rights reserved.
+buildNum=${build.number}
 date.format=dd MMM yyyy
 
 ###==================== Generic messages ====================###
