update to the build this will record the version date and time and user for the new build (needs testing)

--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -2,7 +2,7 @@
 
 application.title=TalentEvolution
 application.copyright=Copyright &#169; 2004-${build.year}, <a href="http://www.talentscope.net">Talent Management Evolution, Inc.</a> All rights reserved.
-buildNum=${build.version}
+buildNum=${build.info}
 date.format=dd MMM yyyy
 
 ###==================== Generic messages ====================###
