fixed some issues with the build clientmessages not being included, though this needs testing

--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -1524,6 +1524,7 @@ mi.browse.home.pages=Home Pages
 mi.dashboards=Dashboards
 mi.sync.settings=Adaptors
 mi.data.upload=Data Uploads
+mi.upload.data=Data Uploads
 
 #################### other arena menu item labels ########################
 mi.organisation.unit=Organisation Unit
