styles copy over hopefully up to date

--- a/talent-studio-views/clients/marcusthomas/resources/language/en/clientmessages.properties
+++ b/talent-studio-views/clients/marcusthomas/resources/language/en/clientmessages.properties
@@ -90,7 +90,7 @@ appraisal.competency.list=Competency Assessment
 O=Organization
 O.arena.attributes.msg=Organization Attributes
 
-questionnaires.items=Completed Appraisals
+questionnaires.items=Completed Performance Reviews
 appraisal.list=Performance Review
 menusection.appraisals=Performance Review
 mi.appraisals=Performance Review
