Left to check is the validation of the xml using the schema it seems the min-length attribute has not kicked in!

--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -358,6 +358,7 @@ add.lookupvalue.for=Add selection value for type {0}
 
 ## validation error messages
 error.duplicate.label=A value with the specified display name already exists. Label must be unique.
+error.data.integrity.issue=There is a problem with the xml issue found: {0}.
 
 ###==================== role properties ====================###
 roles=Roles
