in progress with the hr review process, computer keeps crashing so need to back up this IS IN NOWAY READY

--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -2081,3 +2081,7 @@ download=Download
 save.pdf.all=Download All
 user.assign.hr=HR Users
 hr=HR
+questionnaire.hr=HR User
+select.hr.user=Select HR User
+send.to.hr=Send To HR\:
+worklist.appraisal.awaiting.approval=Awaiting Approval
