--- a/talent-studio-views/src/main/resources/messages_fr.properties
+++ b/talent-studio-views/src/main/resources/messages_fr.properties
@@ -1658,3 +1658,6 @@ reopen.confirm.message=Please confirm you wish to reopen the goals for editing. 
 reopen=Reopen
 user.assign.hr=HR Users
 hr=HR
+questionnaire.hr=HR User
+send.to.hr=Send To HR\:
+worklist.appraisal.awaiting.approval=Awaiting Approval
