partially tested the hr flow, still need to make sure approve works, still to do is the managers manager and verify the manager can complete once approved

--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -2085,3 +2085,8 @@ questionnaire.hr=HR User
 select.hr.user=Select HR User
 send.to.hr=Send To HR\:
 worklist.appraisal.awaiting.approval=Awaiting Approval
+worklist.approval.invitation=Approve
+worklist.verify.invitation=Verify
+worklist.view=View
+approve.warning=Are you sure you wish to approve this appaisal, the action cannot be undone, and this notificaiton will be removed?
+verify.warning=Are you sure you wish to verify this review, please note the action cannot be undone and this notification will be removed
