--- a/talent-studio-views/src/main/resources/messages_fr.properties
+++ b/talent-studio-views/src/main/resources/messages_fr.properties
@@ -1661,3 +1661,8 @@ hr=HR
 questionnaire.hr=HR User
 send.to.hr=Send To HR\:
 worklist.appraisal.awaiting.approval=Awaiting Approval
+worklist.approval.invitation=Approve
+worklist.verify.invitation=Verify
+worklist.view=View
+approve.warning=Are you sure you wish to approve this appaisal, the action cannot be undone, and this notificaiton will be removed?
+verify.warning=Are you sure you wish to verify this review, please note the action cannot be undone and this notification will be removed
