added hr flow to regular info forms, only triggers if there is a send to manager option

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,6 +1,10 @@
 release date: 
-release version 5.4.4
+release version 5.4.8
 -------------------------------------------
+
+TODO
+-------------------------------------------
+1) add hr selection in questionnaires (not for info-forms? - for either)
 
 New in this release:
 -------------------------------------------
