Added a decimal type, and a currency type to attributes and questionnaires, still very raw and needs lots of testing, especially in dynamic line items

--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -493,8 +493,8 @@ da.latest=Latest
 
 da.NUMBER.minsize=Min Value
 da.NUMBER.maxsize=Max Value
-da.DOUBLE.minsize=Min Value
-da.DOUBLE.maxsize=Max Value
+da.DECIMAL.minsize=Min Value
+da.DECIMAL.maxsize=Max Value
 da.STRUCT.refersto=Refers To
 da.MULTISELECT.refersto=Refers To
 da.TEXTAREA.maxsize=Max Length
@@ -509,7 +509,8 @@ da.DATETIME.minsize=Earliest
 da.DATETIME.maxsize=Latest
 
 NUMBER=Number
-DOUBLE=Double Number
+DECIMAL=Decimal Number
+CURRENCY=Currency
 DATE=Date
 TEXT=Text
 TEXTAREA=Text Block
@@ -583,6 +584,7 @@ attr.less.than.text=(Max {0} characters)
 error.dynamicattribute.description.required=Description is a required field.
 error.dynamicattribute.label.required=Label is a required field.
 error.no.values.for.time=Please enter both date and time values.
+error.currency.required=Currency is required
 
 ##################============= user properties - some of these are also used in the subject flows ===============##############
 contact.telephone=Contact Telephone
