decimal places in progress

--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -1081,7 +1081,7 @@ error.securitydomain.label.required=Name is a required field.
 error.securitydomain.area.required=Please select an area.
 error.security.domain.multiple.homepages=You must select either the url or an upload not both.
 error.malformed.url=Url must be of the format http://[www.][some page].html
-error.required.html.page=Uploaded file must be an html or velocity template file
+error.required.html.page=Uploaded file must be an html file
 
 securitydomain.delete.confirm=Are you sure you want to delete the security domain
 
@@ -1416,6 +1416,8 @@ delete.objective=Delete Objective
 approve=Approve Goals
 republish=Republish
 republished.at=Republished at
+update=Update
+updated.at =Updated at
 users.added=users added.
 users.removed=users removed.
 approve.all=Approve All
