--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 ####==================== Application labels ====================###
 
 application.title=TalentEvolution
-application.copyright=Copyright &#169; 2004-${build.year}, <a href="http://www.talentscope.net">Talent Management Evolution, Inc.</a> All rights reserved.
+application.copyright=Copyright &#169; 2004-${build.year}, <a href="#">ABC, Inc.</a> All rights reserved.
 buildNum=${build.info}
 date.format=dd MMM yyyy
 
