home pages now support the dashbaord only tab

--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -1075,7 +1075,7 @@ securitydomain.assign.users=Assign Users
 securitydomain.assign.area=Assign Area
 
 securitydomain.homepage.uploaded=Home page already uploaded
-securitydomain.homepage.warning=Please either type a URL in the first box, or click on the "File Upload" to upload a file.<br>Warning: The web page to which the given URL points may behave in unexpected ways, such as redirecting to a page outside the frame in Talent-Studio.
+securitydomain.homepage.warning=Please either pick a tab view in the first box or type a URL in the second box, or click on the "File Upload" to upload a file.<br>Warning: The web page to which the given URL points may behave in unexpected ways, such as redirecting to a page outside the frame in Talent-Studio.
 
 error.securitydomain.label.required=Name is a required field.
 error.securitydomain.area.required=Please select an area.
@@ -2094,3 +2094,7 @@ worklist.verify.invitation=Verify
 worklist.view=View
 approve.warning=Are you sure you wish to approve this appaisal, the action cannot be undone, and this notificaiton will be removed?
 verify.warning=Are you sure you wish to verify this review, please note the action cannot be undone and this notification will be removed
+homepage.tab=Tab View
+homepage.url=Url
+homepage.fileupload=Upload File
+group.name=Home Page Group Name
