--- a/talent-studio-views/src/main/resources/messages_fr.properties
+++ b/talent-studio-views/src/main/resources/messages_fr.properties
@@ -1666,3 +1666,5 @@ worklist.verify.invitation=Verify
 worklist.view=View
 approve.warning=Are you sure you wish to approve this appaisal, the action cannot be undone, and this notificaiton will be removed?
 verify.warning=Are you sure you wish to verify this review, please note the action cannot be undone and this notification will be removed
+homepage.tab=Create property
+homepage.url=Url
