adding workflows to the front end

--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -2098,3 +2098,4 @@ homepage.tab=Tab View
 homepage.url=Url
 homepage.fileupload=Upload File
 group.name=Home Page Group Name
+select.workflow.to.chart=Please select the form containing the attributes you wish to chart
