dashboard series chart in progress- adding the save

--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -1718,6 +1718,7 @@ title.list.dashboards=Dashboards
 title.add.dashboard=Add New Dashboard
 title.edit.dashboard=Edit Dashboard
 title.view.dashboard=View Dashboard
+title.edit.dashboard.addchart=Edit My Dashboard - Add Chart
 
 objectives.individualview.awaiting.approval=NO ACTION REQUIRED: Awaiting your manager's approval.
 objectives.individualview.requesting.review=ACTION REQUIRED: Please review these objectives and submit to manager for approval.
@@ -2099,3 +2100,6 @@ homepage.url=Url
 homepage.fileupload=Upload File
 group.name=Home Page Group Name
 select.workflow.to.chart=Please select the form containing the attributes you wish to chart
+please.select.x.axis.attribute=Please select x-axis attribute
+please.select.y.axis.attribute=Please select y-axis attribute
+select.form.to.chart=Please select the form containing the attributes you wish to chart
