all files ready just need to add the chart data

--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -2103,3 +2103,6 @@ select.workflow.to.chart=Please select the form containing the attributes you wi
 please.select.x.axis.attribute=Please select x-axis attribute
 please.select.y.axis.attribute=Please select y-axis attribute
 select.form.to.chart=Please select the form containing the attributes you wish to chart
+please.select.x.axis.label=Please enter x-axis label
+please.select.y.axis.label=Please enter y-axis label
+add.series.chart=Add Series
