--- a/talent-studio-views/src/main/resources/messages_fr.properties
+++ b/talent-studio-views/src/main/resources/messages_fr.properties
@@ -1668,3 +1668,4 @@ approve.warning=Are you sure you wish to approve this appaisal, the action canno
 verify.warning=Are you sure you wish to verify this review, please note the action cannot be undone and this notification will be removed
 homepage.tab=Create property
 homepage.url=Url
+please.select.y.axis.label=Please enter y-axis label
