--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -2106,3 +2106,5 @@ select.form.to.chart=Please select the form containing the attributes you wish t
 please.select.x.axis.label=Please enter x-axis label
 please.select.y.axis.label=Please enter y-axis label
 add.series.chart=Add Series
+please.select.series.attribute=Select an attribute to chart the series
+please.select.series.label=Please enter a label for the series
