--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -2108,3 +2108,4 @@ please.select.y.axis.label=Please enter y-axis label
 add.series.chart=Add Series
 please.select.series.attribute=Select an attribute to chart the series
 please.select.series.label=Please enter a label for the series
+NotEmpty.SeriesChartDashboardItemWrapperBean.chartLabel=Please select a name for the chart
