ability to have multiple series

--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -2109,3 +2109,4 @@ add.series.chart=Add Series
 please.select.series.attribute=Select an attribute to chart the series
 please.select.series.label=Please enter a label for the series
 NotEmpty.SeriesChartDashboardItemWrapperBean.chartLabel=Please select a name for the chart
+label.for.chart=Please enter a label for the chart
