--- a/talent-studio-views/src/main/resources/messages.properties
+++ b/talent-studio-views/src/main/resources/messages.properties
@@ -2110,3 +2110,6 @@ please.select.series.attribute=Select an attribute to chart the series
 please.select.series.label=Please enter a label for the series
 NotEmpty.SeriesChartDashboardItemWrapperBean.chartLabel=Please select a name for the chart
 label.for.chart=Please enter a label for the chart
+line.chart=Line Chart
+please.select.chart.type=Please choose how to display the series
+please.select.series.type=Display as
